<resources>
    <string name="app_name">HaVagas</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="email">E-mail</string>
    <string name="ckEmails">Deseja rebecer novas atualizações sobre nossas vagas?</string>
    <string name="telefone">(xx) 1111-0000</string>
    <string name="comercial">Telefone Comercial</string>
    <string name="residencial">Telefone Residencial</string>
    <string name="telCel">(xx)  91111-0000</string>
    <string name="addTelCel">Adicione um numero de celular</string>
    <string name="sexo">Sexo</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="dtNascimento">Data de Nascimento</string>
    <string name="formacao">Grau de Escolaridade</string>

    <string name="txtAnoFormatura">Ano de Formatura</string>
    <string name="anoFormatura">Digite o ano de formatura</string>
    <string name="txtConclusao">Ano de Conclusão</string>
    <string name="escola">Nome da Instituição</string>
    <string name="titulo_monografia">Título de Monografia</string>
    <string name="orientador">Nome do Orientador</string>
    <string name="ano_de_formatura">Ano da Formatura</string>
    <string name="txtAnoConclusao">Ano de Conclusão do Curso</string>
    <string name="instituicao">Nome da instituição</string>

    <string name="vagasInteresse">Vagas de Interesse</string>
    <!--Botões-->
    <string name="Btlimpar">Limpar</string>
    <string name="Btsalvar">Salvar</string>

    <string-array name="formacao">
        <item>Ensino Fundamental</item>
        <item>Ensino Médio</item>
        <item>Graduação</item>
        <item>Especialização</item>
        <item>Mestrado</item>
        <item>Doutorado</item>
        <item>MBA</item>
        <item>Licenciatura</item>
        <item>Curso Técnico</item>
        <item>Tecnologo</item>
        <item>Pos Doutorado</item>
    </string-array>
</resources>